--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
     <head>
         <meta charset="UTF-8"/>
         <Link rel="stylesheet" href="styles.css"/>
-        <title><h1>Etch A Sketch Game!</h1></title>
+        <title>Etch A Sketch Game!</title>
     </head>
     <body>
-        
+        <div class="header">
+            <h1>Etch A Sketch!</h1>
+        </div>
+        <div class="content">
+            <div id="container"></div>
+        </div>
+        <button id="newGridButton">New Grid</button>
         <script src="script.js"></script>
     </body>
 </html>
