Changed grid size button with slider

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <div class="content">
             <div id="container"></div>
         </div>
-        <button id="newGridButton">New Grid</button>
+        <div id="sliderValue" class="sliderValue">16x16</div>
+        <input type="range" min="1" max="100" value="16" id="gridSizeSlider">
         <script src="script.js"></script>
     </body>
 </html>
